Created edit event and tests for edit event and create event